--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, #4285f4 0%, #34a853 100%); position: relative;">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.2.3</div>
+        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.2.4</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
@@ -2153,9 +2153,11 @@ function renderTests() {
       guardar();
     });
     delBtn.addEventListener('click', () => {
-      activeCard._tests.splice(originalIdx, 1);
-      renderTests();
-      guardar();
+      if (confirm('¿Estás seguro de que deseas eliminar esta prueba evaluable?')) {
+        activeCard._tests.splice(originalIdx, 1);
+        renderTests();
+        guardar();
+      }
     });
 
     testsList.appendChild(row);
