docs: Añadido slide de tutorial explicando el modo Liquid Glass y navegación actualizada

--- a/index.html
+++ b/index.html
@@ -171,10 +171,32 @@
         <h2>Dashboard y Estadísticas</h2>
         <p>Visualiza tu progreso con gráficos, estadísticas y un ranking de tus asignaturas. Exporta informes en PDF cuando lo necesites.</p>
       </div>
+
+      <!-- Slide 7: Liquid Glass -->
+      <div class="onboarding-slide">
+        <div class="onboarding-image">
+          <svg width="200" height="160" viewBox="0 0 200 160" fill="none">
+            <defs>
+              <linearGradient id="lg" x1="0" y1="0" x2="1" y2="1">
+                <stop offset="0%" stop-color="#f0f9ff"/>
+                <stop offset="50%" stop-color="#93c5fd"/>
+                <stop offset="100%" stop-color="#3b82f6"/>
+              </linearGradient>
+            </defs>
+            <rect x="20" y="25" width="160" height="110" rx="14" fill="url(#lg)" opacity="0.7"/>
+            <rect x="28" y="35" width="144" height="92" rx="12" fill="#ffffff" opacity="0.25"/>
+            <rect x="28" y="35" width="144" height="92" rx="12" stroke="#ffffff" stroke-opacity="0.6"/>
+            <text x="100" y="88" text-anchor="middle" font-size="20" fill="#0f172a" font-weight="600">Liquid Glass</text>
+          </svg>
+        </div>
+        <h2>Modo Liquid Glass</h2>
+        <p>Un tema con fondo azul-blanco animado y efecto vidrio. Mejora el contraste en iOS y Android y puedes activarlo desde el botón de modo. Pulsa varias veces para alternar Claro → Oscuro → Glass.</p>
+      </div>
     </div>
     
     <div class="onboarding-dots">
       <span class="dot active"></span>
+      <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
