style: Efecto 'lens glare' sutil en el slide de Liquid Glass del tutorial

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
       <!-- Slide 7: Liquid Glass -->
       <div class="onboarding-slide">
-        <div class="onboarding-image">
+        <div class="onboarding-image lens-glare">
           <svg width="200" height="160" viewBox="0 0 200 160" fill="none">
             <defs>
               <linearGradient id="lg" x1="0" y1="0" x2="1" y2="1">
@@ -190,7 +190,7 @@
           </svg>
         </div>
         <h2>Modo Liquid Glass</h2>
-        <p>Un tema con fondo azul-blanco animado y efecto vidrio. Mejora el contraste en iOS y Android y puedes activarlo desde el botón de modo. Pulsa varias veces para alternar     Claro → Oscuro → Glass.</p>
+        <p>Un tema con fondo azul-blanco animado y efecto vidrio. Mejora el contraste en iOS y Android y puedes activarlo desde el botón de modo. Pulsa varias veces para alternar Claro → Oscuro → Glass.</p>
       </div>
     </div>
     
