--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, rgba(66,133,244,0.25) 0%, rgba(52,168,83,0.25) 100%); position: relative; border-bottom: 1px solid rgba(0,0,0,0.06);">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.3.8</div>
+        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.3.9</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
@@ -557,14 +557,18 @@
     </div>
     <div class="modal-body">
       <div class="glass-suggestion-content">
-        <div class="glass-preview" aria-hidden="true"></div>
+        <div class="glass-preview strong-glare" aria-hidden="true">
+          <div class="preview-card lens-glare-strong">
+            <img src="assets/tutorial/liquid-glass-hero.png" alt="Vista previa Liquid Glass" />
+          </div>
+        </div>
         <p class="glass-suggestion-text">
           En iOS, el modo Liquid Glass mejora el contraste con un efecto elegante y suave.
           ¿Quieres activarlo ahora?
         </p>
-        <div class="glass-suggestion-actions">
-          <button class="btn btn-primary" onclick="activateGlassModeFromSuggestion()">Activar ahora</button>
-          <button class="btn btn-ghost" onclick="closeGlassSuggestion()">Más tarde</button>
+        <div class="modal-actions center">
+          <button class="cta cta-primary" onclick="activateGlassModeFromSuggestion()">Activar ahora</button>
+          <button class="cta cta-secondary" onclick="closeGlassSuggestion()">Más tarde</button>
         </div>
       </div>
     </div>
