--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, rgba(66,133,244,0.25) 0%, rgba(52,168,83,0.25) 100%); position: relative; border-bottom: 1px solid rgba(0,0,0,0.06);">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.3.9</div>
+        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.3.10</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
@@ -559,7 +559,20 @@
       <div class="glass-suggestion-content">
         <div class="glass-preview strong-glare" aria-hidden="true">
           <div class="preview-card lens-glare-strong">
-            <img src="assets/tutorial/liquid-glass-hero.png" alt="Vista previa Liquid Glass" />
+            <!-- SVG idéntico al del último slide del tutorial -->
+            <svg width="100%" height="auto" viewBox="0 0 200 160" fill="none" preserveAspectRatio="xMidYMid meet">
+              <defs>
+                <linearGradient id="lg-suggestion" x1="0" y1="0" x2="1" y2="1">
+                  <stop offset="0%" stop-color="#f0f9ff"/>
+                  <stop offset="50%" stop-color="#93c5fd"/>
+                  <stop offset="100%" stop-color="#3b82f6"/>
+                </linearGradient>
+              </defs>
+              <rect x="20" y="25" width="160" height="110" rx="14" fill="url(#lg-suggestion)" opacity="0.7"/>
+              <rect x="28" y="35" width="144" height="92" rx="12" fill="#ffffff" opacity="0.25"/>
+              <rect x="28" y="35" width="144" height="92" rx="12" stroke="#ffffff" stroke-opacity="0.6"/>
+              <text x="100" y="88" text-anchor="middle" font-size="20" fill="#0f172a" font-weight="600">Liquid Glass</text>
+            </svg>
           </div>
         </div>
         <p class="glass-suggestion-text">
