--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
       <div class="modal-header" style="background: linear-gradient(135deg, rgba(66,133,244,0.25) 0%, rgba(52,168,83,0.25) 100%); position: relative; border-bottom: 1px solid rgba(0,0,0,0.06);">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
-        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.3.15</div>
+        <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;" title="Ver historial de cambios">v2.3.16</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
@@ -1934,6 +1934,15 @@ document.addEventListener('DOMContentLoaded', () => {
   initThemeMode();
   showMenuScreen();
   initScrollHideUI();
+  // Soporte de rotación: añadir clase a body según orientación
+  function setOrientationClass() {
+    const isLandscape = window.matchMedia('(orientation: landscape)').matches || (window.innerWidth > window.innerHeight);
+    document.body.classList.toggle('landscape', isLandscape);
+    document.body.classList.toggle('portrait', !isLandscape);
+  }
+  setOrientationClass();
+  window.addEventListener('orientationchange', setOrientationClass);
+  window.addEventListener('resize', setOrientationClass);
 });
 
 /* -------------------------
