--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           style="background: linear-gradient(135deg, rgba(66,133,244,0.25) 0%, rgba(52,168,83,0.25) 100%); position: relative; border-bottom: 1px solid rgba(0,0,0,0.06);">
           <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
           <div class="app-version" id="version-badge" style="cursor: pointer; user-select: none;"
-            title="Ver historial de cambios">v2.3.21</div>
+            title="Ver historial de cambios">v2.3.22</div>
         </div>
         <div class="modal-body">
           <div id="sync-code-content"></div>
@@ -1545,6 +1545,7 @@
       card.draggable = true;
       card.dataset.color = color;
       card.style.background = color;
+      card.style.setProperty('--card-color', color); // Setup for tinted glass
       card._clickCount = 0;
       card._lastClickTime = 0;
       card._tests = [];
@@ -1587,6 +1588,7 @@
 
       select.addEventListener('change', (e) => {
         card.style.background = e.target.value;
+        card.style.setProperty('--card-color', e.target.value);
         card.dataset.color = e.target.value;
         guardar();
       });
