Rediseñado botón de exámenes pasados con mejor estilo y posicionamiento

--- a/index.html
+++ b/index.html
@@ -508,11 +508,11 @@
             <!-- Los exámenes futuros se renderizarán aquí -->
           </div>
 
-          <div id="past-exams-section"
-            style="margin-top: 30px; display:none; border-top: 1px solid var(--input-border); padding-top: 20px;">
-            <button id="toggle-past-exams" class="btn btn-ghost" style="width:100%; margin-bottom:15px;">⬇️ Ver Exámenes
-              Pasados</button>
-            <div id="past-exams-list" class="exams-list" style="display:none; opacity: 0.7;">
+          <div id="past-exams-section" class="past-exams-section" style="display:none;">
+            <button id="toggle-past-exams" class="btn-toggle-past-exams">
+              <span class="icon">📥</span> Ver Exámenes Pasados
+            </button>
+            <div id="past-exams-list" class="exams-list past-exams-list-content" style="display:none;">
               <!-- Los exámenes pasados se renderizarán aquí -->
             </div>
           </div>
@@ -4969,6 +4969,25 @@
       console.log('✅ App instalada correctamente');
       deferredPrompt = null;
     });
+
+    // Toggle para exámenes pasados
+    const togglePastExamsBtn = document.getElementById('toggle-past-exams');
+    if (togglePastExamsBtn) {
+      togglePastExamsBtn.addEventListener('click', function () {
+        const pastExamsList = document.getElementById('past-exams-list');
+        const isExpanded = pastExamsList.classList.contains('expanded');
+
+        if (isExpanded) {
+          pastExamsList.classList.remove('expanded');
+          this.classList.remove('expanded');
+          this.innerHTML = '<span class="icon">📥</span> Ver Exámenes Pasados';
+        } else {
+          pastExamsList.classList.add('expanded');
+          this.classList.add('expanded');
+          this.innerHTML = '<span class="icon">📥</span> Ocultar Exámenes Pasados';
+        }
+      });
+    }
 
   </script>
 
